park the state of things

--- a/media/css/common/buildGraph.css
+++ b/media/css/common/buildGraph.css
@@ -3,10 +3,6 @@
  */
 
 #buildgraph rect {
-    fill: steelblue;
+    fill: gray;
     stroke: white;
-}
-
-#buildgraph line {
-    stroke: black;
 }
